# PracticeProject1

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/src/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/: core.h
libs/core/src/: core.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/: utils.h
libs/utils/src/: utils.cpp
tests/: CMakeLists.txt
tests/include/: tests.h
tests/src/: tests.cpp
testsCatch2/: CMakeLists.txt
testsCatch2/src/: testsCatch2.cpp
